Issue #179: now using Files.readString method